# Practica

./: CMakeLists.txt  README.md  Trabajador.cpp  Trabajador.h  Trabajadores.cpp  Trabajadores.h  main.cpp
Equipos/: F1Team.cpp  F1Team.h  PitCrewTeam.cpp  PitCrewTeam.h  TeamDriverA.cpp  TeamDriverA.h  TeamDriverB.cpp  TeamDriverB.h
Trabajadores/: FlapAdjust.cpp  FlapAdjust.h  FrontJack.cpp  FrontJack.h  Lollipop.cpp  Lollipop.h  RearJack.cpp  RearJack.h  Steadier.cpp  Steadier.h  TyreGunner.cpp  TyreGunner.h  TyreOff.cpp  TyreOff.h  TyreOn.cpp  TyreOn.h
